# investment-portfolio-manager

./: .gitignore  AGENTS.md  LICENSE  README.md  TODO.md  start.sh
.github/workflows/: ci.yml  release.yml
backend-scala/: Dockerfile.native  build-native.sh  build.sbt  native-image.properties
backend/app/: database.py  main.py  models.py  schemas.py  stats_engine.py  tax_engine.py
backend/tests/: test_currency_service.py  test_integration_routes.py  test_stats_engine.py  test_tax_engine.py
backend_rust/: Cargo.toml  Dockerfile
backend_rust/src/: lib.rs  main.rs  models.rs  openapi.rs  schemas.rs
backend_rust/src/api_routes/: analytics.rs  portfolios.rs  transactions.rs
backend_rust/src/engines/: mod.rs  stats_engine.rs  tax_engine.rs
backend_rust/src/routes/: analytics.rs  portfolios.rs  transactions.rs
backend_rust/src/services/: currency_service.rs  mod.rs
backend_rust/tests/: analytics_test.rs  cors_test.rs  portfolios_test.rs  transactions_test.rs
backend_rust/tests/common/: mod.rs
docs/: implementation_plan.md  migration_python_to_rust.md  walkthrough.md
docs/openapi/: openapi.json
frontend/: .dockerignore  Dockerfile  eslint.config.js  find_all_braces.py  find_braces.py  find_braces_context.py  find_braces_fixed.py  find_braces_simple.py  find_extra_brace.py  find_extra_closing.py  find_mismatch.py  find_unclosed.py  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  App.tsx  (+2 more)
k8s/: app-deployment.yaml  app-service.yaml  configmap.yaml  ingress.yaml  namespace.yaml  pv.yaml  pvc.yaml  storageclass.yaml
(+42 files in other folders)
