[package]
name = "backend_rust"
version = "0.1.0"
edition = "2024"
default-run = "backend_rust"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
utoipa = { version = "4.2", features = ["rocket_extras"] }
utoipa-swagger-ui = { version = "6.0", features = ["rocket"] }
